feat: get single detailed elements, modify image filenames
